	Fix issues reported by Saga Musix:
	- fix 669 effects when no instrument number is specified
	- fix 669 effects to be frequency-based
	- fix 669 initial tempo
	Other changes:
	- fix S3M channel reset on sample end (reported by Alexander Null)
	- fix Noisetracker MOD speed setting (reported by Tero Auvinen)
	- fix IT loader DCA sanity check (reported by Paul Gomez Givera)
	- add Antti Lankila's Amiga 500 modeling mixer
	- add support to filter effect E0 in Amiga mods
	- add flags to configure player mode
	- add option to set the maximum number of virtual channels
	- add frequency-based "period" mode
	- limit Oktalyzer modules to MOD note range
	- remove broken synth chip and Adlib emulation suport
	- code refactoring and cleanup

4.3.13 (20160417):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT volume column fine volume slide with row delay
	Other changes:
	- fix MOD vs XM set finetune effect
	- fix IT old instrument volume
	- fix IT panbrello speed
	- fix IT random pan variation left bias
	- fix IT default pan in sample mode (reported by Hai Shalom)
	- fix S3M set pan effect (reported by Hai Shalom and Johannes Schultz)
	- code refactoring and cleanup

4.3.12 (20160305):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT note off with instrument
	- fix IT note recover after cut
	- fix IT instrument without note after note cut event
	- fix IT pan reset on new note instead of new instrument
	- fix IT volume swing problems
	- fix XM glissando effect
	- fix Scream Tracker 3 period limits
	- fix Scream Tracker 3 tremolo memory
	Other changes:
	- fix IT pattern break in hexadecimal (reported by StarFox008)
	- fix S3M subsong detection (reported by knight-ryu12)
	- fix S3M/IT special marker handling (reported by knight-ryu12)
	- fix Galaxy Music System 4.0 song length (reported by AntonZab)
	- fix tone portamento memory without note (reported by NoSuck)
	- fix IT pan swing limits
	- Add TrackerPacker v1 format converter
	- Add TrackerPacker v2 format converter