@@ -26,6 +26,7 @@ Stable versions
 	- fix S3M channel reset on sample end (reported by Alexander Null)
 	- fix Noisetracker MOD speed setting (reported by Tero Auvinen)
 	- fix IT loader DCA sanity check (reported by Paul Gomez Givera)
+	- fix IT envelope reset after offset with portamento
 	- add Antti Lankila's Amiga 500 modeling mixer
 	- add support to filter effect E0 in Amiga mods
 	- add flags to configure player mode
